# kantour

./: .gitattributes  .gitignore  .hlint.yaml  .travis.yml  README.md  Setup.hs  example.yaml  fourmolu.yaml  hie.yaml  kantour.cabal  package.yaml  stack.yaml
.github/workflows/: ci.yml
coded/: coded.cabal
coded/src/: Main.hs
dropcalc/: dropcalc.cabal
dropcalc/src/: Main.hs
kantour/: hie.yaml  kantour.cabal  package.yaml  stack.yaml
kantour-cli/: hie.yaml  kantour-cli.cabal  package.yaml
kantour-cli/mains/: Main.hs
kantour-cli/src/Kantour/: AirstrikeLeveling.hs  AswEquip.hs  Coded.hs  DecMapUrl.hs  DropCalc.hs  GameServerLab.hs  JsonNormalizer.hs  Main.hs  MasterLab.hs  Sprite.hs  TH.hs
kantour-cli/src/Kantour/Kcwiki/: EquipmentInfo.hs  ShipInfo.hs
kantour-cli/src/Kantour/MapTool/: Main.hs  MapConfig.hs  Xml.hs
kantour-cli/src/Kantour/MapToolFast/: Main.hs
kantour-cli/src/Kantour/MapTwol/: Superimpose.hs
kantour-cli/src/Kantour/ShipStat/: Main.hs
kantour-cli/src/Kantour/Sprite/: Spritesmith.hs
kantour-cli/src/Kantour/WhoCallsTheFleet/: Fetch.hs  Types.hs
kantour-cli/src/Kantour/WhoCallsTheFleet/Types/: Common.hs  Equipment.hs
kantour-core/: hie.yaml  kantour-core.cabal  package.yaml
kantour-core/data/: api_start2.json.xz
kantour-core/src/Kantour/: DecMapUrl.hs  Main.hs  TH.hs  Utils.hs
kantour-core/src/Kantour/Core/: DataFiles.hs  Utils.hs
kantour-core/src/Kantour/Core/GameResource/: Magic.hs
kantour-core/src/Kantour/Core/KcData/Map/: Background.hs  Enemy.hs  Image.hs  Info.hs  Spot.hs  Sprite.hs  Xywh.hs
kantour-core/src/Kantour/Core/KcData/Master/: Bgm.hs  Common.hs  Const.hs  Direct.hs  EquipExslotShip.hs  EquipShip.hs  Fetch.hs  Furniture.hs  Furnituregraph.hs  ItemShop.hs  Maparea.hs  Mapbgm.hs  Mapinfo.hs  Mission.hs  Org.hs  Payitem.hs  Root.hs  Ship.hs  Shipgraph.hs  Shipupgrade.hs  Slotitem.hs  SlotitemEquiptype.hs  Stype.hs  Useitem.hs
kantour-core/src/Kantour/Core/KcData/Master/Direct/: Bgm.hs  Common.hs  Const.hs  EquipExslotShip.hs  EquipShip.hs  Furniture.hs  Furnituregraph.hs  ItemShop.hs  Maparea.hs  Mapbgm.hs  Mapinfo.hs  Mission.hs  Payitem.hs  Root.hs  Ship.hs  Shipgraph.hs  Shipupgrade.hs  Slotitem.hs  SlotitemEquiptype.hs  Stype.hs  Useitem.hs
kantour-core/src/Kantour/Core/KcData/Master/Org/: Bgm.hs  Common.hs  Const.hs  Equip.hs  EquipCategory.hs  EquipExslotShip.hs  EquipShip.hs  Expedition.hs  Furniture.hs  FurnitureGraph.hs  ItemShop.hs  MapArea.hs  MapBgm.hs  MapInfo.hs  PayItem.hs  Root.hs  Ship.hs  ShipGraph.hs  ShipType.hs  ShipUpgrade.hs  UseItem.hs
kantour-core/src/Kantour/KcData/Map/: Background.hs  Enemy.hs  Sprite.hs  Xywh.hs
kantour-core/src/Kantour/MapToolFast/: Main.hs
kantour-core/src/Kantour/WhoCallsTheFleet/: Main.hs
kantour-core/test/Kantour/: UtilsSpec.hs
kantour-core/test/Kantour/Core/: UtilsSpec.hs
kantour-core/test/Kantour/Core/GameResource/: MagicSpec.hs
kantour-core/test/Kantour/Core/KcData/Master/: CompletenessSpec.hs
kantour/mains/dropcalc/: Main.hs
kantour/mains/maptool/: Main.hs
kantour/src/: Kantour.hs
kantour/src/Kantour/: ApiParser.hs  AswEquip.hs  DropCalc.hs  FetchMasterData.hs  Main.hs  MapRedraw.hs  MasterLab.hs
kantour/src/Kantour/Coded/: Main.hs
kantour/src/Kantour/DropCalc/: Main.hs
kantour/src/Kantour/Kcwiki/: ShipInfo.hs
kantour/src/Kantour/MapTool/: Draw.hs  Main.hs  Types.hs  Xml.hs
kantour/src/Kantour/MapTwol/: Main.hs  Superimpose.hs
kantour/src/Kantour/MiniJson/: Main.hs  Parser.hs  Types.hs
kantour/src/Kantour/QuotesFetch/: Fetch.hs  Parser.hs  ShipDatabase.hs
kantour/src/Kantour/ShipStat/: Core.hs  Main.hs  ProcessDump.hs
kantour/src/Kantour/WhoCallsTheFleet/: Fetch.hs  Main.hs  Types.hs
kantour/src/Kantour/WhoCallsTheFleet/Types/: Ship.hs
mains/: README.md
mains/aswequip/: Main.hs
mains/coded/: Main.hs
mains/decmapurl/: Main.hs
mains/minijson/: Main.hs
mains/quotesfetch/: Main.hs
mains/shipstat/: Main.hs
mains/wctf/: Main.hs
maptool/: maptool.cabal
maptool/src/: Draw.hs  Main.hs  Types.hs
minijson/: minijson.cabal
minijson/src/: Main.hs
minijson/src/MiniJson/: Parser.hs  Types.hs
quotes-fetcher/: quotes-fetcher.cabal  stack.yaml
quotes-fetcher/src/: Fetch.hs  Main.hs  Parser.hs  ShipDatabase.hs  Types.hs
src/Kantour/: AswEquip.hs  Coded.hs  DecMapUrl.hs  DropCalc.hs  Main.hs  MapRedraw.hs  ShipStat.hs  Subcommand.hs  Utils.hs
src/Kantour/ASWEquip/: Main.hs
src/Kantour/Coded/: Main.hs
src/Kantour/DecMapUrl/: Main.hs
src/Kantour/DropCalc/: Main.hs
src/Kantour/ESports/: Main.hs  Progressor.hs  Quest.hs
src/Kantour/GameResource/: Magic.hs
src/Kantour/KcData/Map/: BgObject.hs  Image.hs  Info.hs  Spot.hs  Sprite.hs  Xywh.hs
src/Kantour/Kcwiki/: EquipmentInfo.hs  ShipInfo.hs
src/Kantour/MapTool/: Draw.hs  Main.hs  MapConfig.hs  Types.hs  Xml.hs
src/Kantour/MapTwol/: Main.hs  Spritesmith.hs  Superimpose.hs
src/Kantour/MiniJson/: Main.hs  Parser.hs  Types.hs
src/Kantour/QuotesFetch/: ComponentParser.hs  Fetch.hs  InterpShipDatabase.hs  JsonMerge.hs  Kcwiki.hs  Main.hs  PageParser.hs  PageProcessor.hs  Parser.hs  ProcessPage.hs  QParser.hs  Quotes.hs  ShipDatabase.hs  SimpleLogger.hs  Template.hs  Types.hs
src/Kantour/ShipStat/: Core.hs  Main.hs  ProcessDump.hs
src/Kantour/WhoCallsTheFleet/: Fetch.hs  Main.hs  Types.hs
src/Kantour/WhoCallsTheFleet/Types/: Common.hs  Equipment.hs  Ship.hs
test/Kantour/: UtilsSpec.hs
test/Kantour/GameResource/: MagicSpec.hs
test/Kantour/QuotesFetch/: PageParserSpec.hs  QParserSpec.hs
