name:                kantour
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/kantour#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Kantour.DropCalc.Main
                     , Kantour.Coded.Main
                     , Kantour.MiniJson.Main
                     , Kantour.MiniJson.Types
                     , Kantour.MiniJson.Parser
                     , Kantour.MapTool.Main
                     , Kantour.MapTool.Types
                     , Kantour.MapTool.Draw
                     , Kantour.QuotesFetch.Types
                     , Kantour.QuotesFetch.ShipDatabase
                     , Kantour.QuotesFetch.Parser
                     , Kantour.QuotesFetch.Fetch
                     , Kantour.QuotesFetch.Main
                     , Kantour.Utils
  build-depends:       base
                     , mwc-random
                     , primitive
                     , vector
                     , statistics
                     , vector-algorithms
                     , math-functions
                     , bytestring
                     , mtl
                     , text
                     , attoparsec
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , hxt
                     , strict
                     , linear
                     , lens
                     , containers
                     , json
                     , language-lua
                     , http-client
                     , http-client-tls
                     , http-types
                     , parallel-io
  default-language:    Haskell2010

executable dropcalc
  hs-source-dirs:      mains/dropcalc
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

executable coded
  hs-source-dirs:      mains/coded
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

executable minijson
  hs-source-dirs:      mains/minijson
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

executable maptool
  hs-source-dirs:      mains/maptool
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

executable quotesfetch
  hs-source-dirs:      mains/quotesfetch
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base
                     , kantour
                     , hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Javran/kantour
