name:                kantour
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/kantour#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Kantour.DropCalc
                     , Kantour.ShipStat.Main
                     , Kantour.ShipStat.Core
                     , Kantour.ShipStat.ProcessDump
                     , Kantour.AswEquip
                     , Kantour.Coded
                     , Kantour.MiniJson.Main
                     , Kantour.MiniJson.Types
                     , Kantour.MiniJson.Parser
                     , Kantour.MapTool.Main
                     , Kantour.MapTool.Types
                     , Kantour.MapTool.Xml
                     , Kantour.MapTool.MapConfig
                     , Kantour.MapTool.Draw
                     , Kantour.DecMapUrl
                     , Kantour.QuotesFetch.Types
                     , Kantour.QuotesFetch.Kcwiki
                     , Kantour.QuotesFetch.ShipDatabase
                     , Kantour.QuotesFetch.PageParser
                     , Kantour.QuotesFetch.ComponentParser
                     , Kantour.QuotesFetch.PageProcessor
                     , Kantour.QuotesFetch.Quotes
                     , Kantour.QuotesFetch.Fetch
                     , Kantour.QuotesFetch.JsonMerge
                     , Kantour.QuotesFetch.SimpleLogger
                     , Kantour.QuotesFetch.Main
                     , Kantour.WhoCallsTheFleet.Main
                     , Kantour.WhoCallsTheFleet.Types
                     , Kantour.WhoCallsTheFleet.Types.Common
                     , Kantour.WhoCallsTheFleet.Types.Ship
                     , Kantour.WhoCallsTheFleet.Types.Equipment
                     , Kantour.WhoCallsTheFleet.Fetch
                     , Kantour.ESports.Main
                     , Kantour.ESports.Quest
                     , Kantour.ESports.Progressor
                     , Kantour.MapToolFast.Main
                     , Kantour.MapRedraw
                     , Kantour.Utils
                     , Kantour.Kcwiki.ShipInfo
                     , Kantour.Subcommand
                     , Kantour.TH
                     , Kantour.Main
  build-depends:       base
                     , mwc-random
                     , random
                     , primitive
                     , vector
                     , statistics
                     , vector-algorithms
                     , math-functions
                     , bytestring
                     , mtl
                     , transformers
                     , text
                     , attoparsec
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-rasterific
                     , hxt
                     , strict
                     , linear
                     , lens
                     , containers
                     , json
                     , hslua <0.5
                     , http-client
                     , http-client-tls
                     , http-types
                     , parallel-io
                     , pretty
                     , megaparsec <=5.3.1
                     , deepseq
                     , monad-logger
                     , fast-logger
                     , mono-traversable
                     , aeson
                     , aeson-pretty
                     , unordered-containers
                     , data-default
                     , yaml
                     , case-insensitive
                     , template-haskell
                     , xeno
                     , hexml
                     , filepath
  default-language:    Haskell2010

executable kantour
  hs-source-dirs:      mains
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  other-modules:       Kantour.UtilsSpec
                       Kantour.QuotesFetch.PageParserSpec
  build-depends:       base
                     , kantour
                     , hspec
                     , hspec-megaparsec <1
                     , megaparsec <=5.3.1
                     , QuickCheck
                     , heredoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Javran/kantour
