name:                kantour
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/kantour#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kantour.DropCalc.Main
                     , Kantour.Coded.Main
                     , Kantour.MiniJson.Main
                     , Kantour.MiniJson.Types
                     , Kantour.MiniJson.Parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mwc-random
                     , primitive
                     , vector
                     , statistics
                     , vector-algorithms
                     , math-functions
                     , bytestring
                     , mtl
                     , text
                     , attoparsec
  default-language:    Haskell2010

executable dropcalc
  hs-source-dirs:      mains/dropcalc
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

executable coded
  hs-source-dirs:      mains/coded
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

executable minijson
  hs-source-dirs:      mains/minijson
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kantour
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Javran/kantour
