name:                maptool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/maptool#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable maptool
  other-modules:       Draw
                     , Types
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , hxt
                     , strict
                     , linear
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Javran/maptool
